# grd

./: CMakeLists.txt  README.md
app/: compareSignatures.cpp  computeLoopClosureStats.cpp  extractSkip.cpp  testGlarot.cpp
cmake_modules/: grdConfig.cmake
data/: params_indoor.cfg
data/maps_with_gt/: fr079.log.cache  mit-csail.log.cache
include/grd/: BBOptimizer1d.h  CarmenV2Reader.h  CorrespondenceGraph.h  DistributionSignature.h  GlareSignature.h  GlarotSignature.h  GnuplotVisualizer.h  KernelSignature.h  LaserScan.h  ParamMap.h  Point.h  Profiler.h  Rate.h  SkipExtractor.h  TfUtils.h  fileutils.h  functions.h
src/: BBOptimizer1d.cpp  CorrespondenceGraph.cpp  DistributionSignature.cpp  GlareSignature.cpp  GlarotSignature.cpp  GnuplotVisualizer.cpp  KernelSignature.cpp  ParamMap.cpp  Profiler.cpp  SkipExtractor.cpp  TfUtils.cpp  fileutils.cpp  functions.cpp
